[tool.coverage.run]
branch = true
source = [ "auth_service" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.poetry]
name = "auth_service"
version = "1.0.0"
description = "Auth service api"
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "auth_service"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.10"
  flask = "2.2.2"
  supabase = "^1.0.3"
  gotrue = "^1.0.1"

  

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
