[tool.coverage.run]
branch = true
source = ["event_service"]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.poetry]
name = "event_service"
version = "1.0.0"
description = "A simple event service for Hibiscus"
authors = []
license = 'Proprietary'
readme = 'README.md'

[[tool.poetry.packages]]
include = "event_service"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
flask = "2.2.2"
supabase = "^1.0.2"
flask-cors = "^3.0.10"
coverage = {extras = ["toml"], version = "^7.2.2"}
pytest = "^7.2.2"
sqlalchemy = "^2.0.15"
psycopg2-binary = "^2.9.6"
chalice = "^1.29.0"


[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
