[tool.coverage.run]
branch = true
source = [ "onboarding_api" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.poetry]
name = "onboarding_api"
version = "1.0.0"
description = "Python REST tasks API for onboarding"
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "onboarding_api"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.10"
  flask = "2.2.2"
  coverage = {extras = ["toml"], version = "^7.2.2"}
  pytest = "^7.2.2"

  

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
