[tool.coverage.run]
branch = true
source = [ "podium_service" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.poetry]
name = "podium_service"
version = "1.0.0"
description = ""
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "podium_service"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.10"
  flask = "2.2.2"
  coverage = {extras = ["toml"], version = "^7.2.2"}
  pytest = "^7.2.2"
  sqlalchemy = "^2.0.13"
  psycopg2-binary = "^2.9.6"

  

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
