[tool.coverage.run]
branch = true
source = [ "python_testsgk" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']

[tool.poetry]
name = "python_testsgk"
version = "1.0.0"
description = "test python for sgk"
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "python_testsgk"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.10"
  flask = "2.2.2"

  

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
