[tool.coverage.run]
branch = true
source = [ "test_python_service" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=100 --cov-report html:'../../coverage/apps/test-python-service/html' --cov-report xml:'../../coverage/apps/test-python-service/coverage.xml' --junitxml='../../reports/apps/test-python-service/unittests/junit.xml' --html='../../reports/apps/test-python-service/unittests/html/index.html'"

[tool.poetry]
name = "test_python_service"
version = "1.0.0"
description = "nick&#39;s test python service"
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "test_python_service"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.10"
  flask = "2.2.2"
  flask-sqlalchemy = "^3.0.3"

  

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
