[tool.coverage.run]
branch = true
source = [ "number_module" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=100 --cov-report html:'../../coverage/libs/number-module/html' --cov-report xml:'../../coverage/libs/number-module/coverage.xml' --junitxml='../../reports/libs/number-module/unittests/junit.xml' --html='../../reports/libs/number-module/unittests/html/index.html'"

[tool.poetry]
name = "number_module"
version = "1.0.0"
description = ""
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "number_module"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.10"

  

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
