[tool.coverage.run]
branch = true
source = [ "onboarding_task_api" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=100 --cov-report html:'../../coverage/libs/onboarding-task-api/html' --cov-report xml:'../../coverage/libs/onboarding-task-api/coverage.xml' --junitxml='../../reports/libs/onboarding-task-api/unittests/junit.xml' --html='../../reports/libs/onboarding-task-api/unittests/html/index.html'"

[tool.poetry]
name = "onboarding-task-api"
version = "1.0.0"
description = "onboarding task"
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "onboarding_task_api"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.10"

  

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
