[tool.coverage.run]
branch = true
source = [ "python_onboarding_library" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.poetry]
name = "python_onboarding_library"
version = "1.0.0"
description = "demo library for onboarding"
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "python_onboarding_library"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.10"

  

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
